[workspace]
resolver = "3"

members = [
    "utils-box",
    "utils-box-archives",
    "utils-box-bits",
    "utils-box-config",
    "utils-box-connections",
    "utils-box-debug",
    "utils-box-logger",
    "utils-box-mathematics",
    "utils-box-pathfinder",
    "utils-box-stopwatch",
    "utils-box-linux",
    "utils-box-versions",
]
