[package]
name = "utils-box-archives"
version = "1.0.1"
edition = "2024"
authors = ["Agathoklis Papadopoulos <klis.pap@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

description = "A toolbox of various small RUST utilities that makes handling compressed files easier"
categories = ["development-tools", "parsing"]
keywords = ["tools", "utilities", "utils", "toolbox"]
exclude = [".github", "Cargo.toml.orig", "cargo_vcs_info.json"]
repository = "https://github.com/klispap/utils-box"

[dependencies]
utils-box-logger = "1.0.1"
anyhow = "1.0.100"
log = "0.4.28"
tar = "0.4.44"
flate2 = "1.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
regex = "1.11.2"

[dev-dependencies]
utils-box-pathfinder = "1.0.1"
indoc = "1.0.9"
tempfile = "3.22.0"
named-lock = "0.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
