[package]
name = "utils-box-connections"
version = "1.0.1"
edition = "2024"
authors = ["Agathoklis Papadopoulos <klis.pap@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

description = "A toolbox of various small RUST utilities that make our lifes easier"
categories = ["development-tools", "config", "network-programming", "parsing"]
keywords = ["tools", "utilities", "utils", "toolbox"]
exclude = [".github", "Cargo.toml.orig", "cargo_vcs_info.json"]
repository = "https://github.com/klispap/utils-box"


[dependencies]
utils-box-logger = "1.0.1"
anyhow = "1.0.100"
log = "0.4.28"
regex = "1.11.2"
zmq = { version = "0.10.0", optional = true }

[target.'cfg(unix)'.dependencies]
ssh2 = { version = "0.9.5", features = ["vendored-openssl"], optional = true }


[dev-dependencies]
indoc = "1.0.9"
tempfile = "3.22.0"
named-lock = "0.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = ["ssh", "zmq", 'tcp', 'udp']
ssh = ["dep:ssh2"]
tcp = []
udp = []
zmq = ["dep:zmq"]
