[package]
name = "utils-box-logger"
version = "1.0.1"
edition = "2024"
authors = ["Agathoklis Papadopoulos <klis.pap@gmail.com>"]
license = "MIT"
readme = "README.md"

description = "A toolbox of various small RUST utilities that make creating logs easier"
categories = ["development-tools", "config", "parsing"]
keywords = ["tools", "utilities", "utils", "toolbox"]
exclude = [".github", "Cargo.toml.orig", "cargo_vcs_info.json"]
repository = "https://github.com/klispap/utils-box"


[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
simplelog = "0.11.2"
file-rotate = "0.7.6"
chrono = "0.4.42"
lazy_static = "1.5.0"

[dev-dependencies]
indoc = "1.0.9"
tempfile = "3.22.0"
named-lock = "0.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
