[package]
name = "utils-box"
version = "1.0.1"
edition = "2024"
authors = ["Agathoklis Papadopoulos <klis.pap@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = ["crates-io"]

description = "A toolbox of various small RUST utilities that make our lifes easier"
categories = ["development-tools", "config", "network-programming", "parsing"]
keywords = ["tools", "utilities", "utils", "toolbox"]
exclude = [".github", "Cargo.toml.orig", "cargo_vcs_info.json"]
repository = "https://github.com/klispap/utils-box"

[dependencies]
utils-box-archives = { version = "1.0.1", optional = true }
utils-box-bits = { version = "1.0.1", optional = true }
utils-box-config = { version = "1.0.1", optional = true }
utils-box-connections = { version = "1.0.1", optional = true }
utils-box-debug = { version = "1.0.1", optional = true }
utils-box-logger = { version = "1.0.1", optional = true }
utils-box-mathematics = { version = "1.0.1", optional = true }
utils-box-pathfinder = { version = "1.0.1", optional = true }
utils-box-stopwatch = { version = "1.0.1", optional = true }
utils-box-linux = { version = "1.0.1", optional = true }
utils-box-versions = { version = "1.0.1", optional = true }

[dev-dependencies]
indoc = "1.0.9"
tempfile = "3.22.0"
named-lock = "0.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = [
    "archives",
    "bits",
    "config",
    "connections",
    "debug",
    "logger",
    "mathematics",
    "pathfinder",
    "stopwatch",
    "linux",
    "versions",
]
archives = ["dep:utils-box-archives"]
bits = ["dep:utils-box-bits"]
config = ["dep:utils-box-config"]
connections = ["dep:utils-box-connections"]
debug = ["dep:utils-box-debug"]
logger = ["dep:utils-box-logger"]
mathematics = ["dep:utils-box-mathematics"]
pathfinder = ["dep:utils-box-pathfinder"]
stopwatch = ["dep:utils-box-stopwatch"]
linux = ["dep:utils-box-linux"]
versions = ["dep:utils-box-versions"]
